# lexon

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  SETUP_STREAMING.md  TEST_SUITE_SUMMARY.md  env.local.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  requirements.txt  vitest.config.ts  vitest.setup.ts
ai-backend/: .coverage  .dockerignore  .gitignore  CREW_REFACTOR_README.md  Dockerfile  Makefile  Procfile  README.md  REFACTOR_SUMMARY.md  alembic.ini  display_overrides.json  flow_config.json  flow_config_v3.json  fly.toml  presets - ND Edits.txt  presets.txt  presets_constraints.txt  presets_vector_indices.txt  property_mappings.json  pyproject.toml  pytest.ini  relationship_mappings.json  requirements.txt  run_doctrine_test.sh  schema.json  schema_unused_relationships.txt  schema_v3.json  test_aura_detailed.py  test_direct_aura.py  test_doctrine_search.py  test_neo4j.py  test_search_comparison.py  views.json  views_v3.json  worker.py
ai-backend/alembic/: env.py
ai-backend/alembic/versions/: 0001_baseline_backend_tables.py
ai-backend/app/: main.py
ai-backend/app/config/: README.md  __init__.py  external_api.py
ai-backend/app/crews/: agents.py  crew.py  tasks.py
ai-backend/app/crews/config/: agents.yaml  tasks.yaml
ai-backend/app/crews/tools/: __init__.py  document_processing_tool.py
ai-backend/app/crews/utils/: __init__.py  callbacks.py  mcp_integration.py
ai-backend/app/cypher/: case_graph.cypher
ai-backend/app/flow_cases/: __init__.py  case_extract_flow.py  case_extract_flow_v2.py  case_extract_flow_v3.py  flow_map.json  flow_map_v3.json  flow_map_v3.yaml
ai-backend/app/flow_cases/crews/case_crew/: case_crew.py  case_crew_v3.py
ai-backend/app/flow_cases/crews/case_crew/config/: agents.yaml  agents_v3.yaml  tasks.yaml  tasks_v3.yaml
ai-backend/app/flow_cases/tools/: extract_case_data_tool.py  io_tools.py
ai-backend/app/flow_import/: __init__.py  import_flow.py
ai-backend/app/flow_import/crews/import_crew/: import_crew.py
ai-backend/app/flow_import/crews/import_crew/config/: agents.yaml  tasks.yaml
ai-backend/app/flow_import/tools/: embeddings_tool.py
ai-backend/app/flow_kg/: __init__.py  flow_kg.py
ai-backend/app/flow_query/: __init__.py  query_flow.py
ai-backend/app/flow_query/crews/query_crew/config/: query_agents.yaml  query_tasks.yaml
ai-backend/app/flow_search/: __init__.py  new_search_flow.py  search_flow.py
ai-backend/app/flow_search/crews/search_crew/: search_crew.py
ai-backend/app/flow_search/crews/search_crew/config/: agents.yaml  new_agents.yaml  new_tasks.yaml  tasks.yaml
ai-backend/app/jobs/: __init__.py  case_extraction_job.py  comparison_job.py  query_job.py  search_crew_job.py
ai-backend/app/lib/: auth.py  batch_query_utils.py  callbacks.py  case_comparison.py  case_repo.py  case_view_builder.py  catalog_validator.py  comparison_repo.py  cypher_generator.py  db.py  document_processor.py  dynamic_document_processor.py  embeddings.py  external_auth.py  graph_events_repo.py  logging_config.py  mcp_integration.py  neo4j_client.py  neo4j_helpers.py  neo4j_uploader.py  openai_client.py  pending_deletions_repo.py  property_filter.py  queue.py  schema.py  schema_runtime.py  search_schema_static.py  security.py  storage.py
ai-backend/app/lib/concept_linking/: __init__.py  analysis_service.py  commit_service.py  schema_parser.py
ai-backend/app/lib/pdf_prescreening/: __init__.py  courtlistener_client.py  gemini_analyzer.py  ilovepdf_client.py  models.py  pipeline.py  text_extractor.py
ai-backend/app/mcp/: __init__.py  neo4j_mcp_server.py
ai-backend/app/models/: case_graph.py  search.py
ai-backend/app/routes/: ai.py  cases.py  chat.py  comparisons.py  concept_linking.py  eval.py  graph_events.py  kg.py  neo4j_cases.py  pending_deletions.py  prescreening.py  query.py  shared_nodes.py
ai-backend/scripts/: backfill_embeddings.py  debug_vector_indices.py  generate_external_api_docs.py
ai-backend/tests/: TEST_MANIFEST.md  _case_extract_test_utils.py  conftest.py  test_cardinality_validation.py  test_case_delete_kg_cleanup.py  test_case_extract_flow_v3_golden.py  test_case_extract_flow_v3_helpers.py  test_case_extract_flow_v3_phases.py  test_cases_get_case_does_not_expose_kg_extracted.py  test_concept_linking.py  test_doctrine_query_integration.py  test_external_api_isolation.py  test_graph_events_repo.py  test_health.py  test_kg_submit_deletion_policy.py  test_kg_submit_event_logging.py  test_neo4j_integration_client.py  test_neo4j_integration_direct.py  test_neo4j_uploader.py  test_neo4j_uploader_transaction_atomicity.py  test_search_flow_integration.py  test_shared_nodes.py
ai-backend/tests/fixtures/: case_extract_schema_min.json
ai-backend/tests/lib/pdf_prescreening/: __init__.py  test_courtlistener_client.py  test_pipeline.py  test_text_extractor.py
docs/: ADMIN_NEO4J_CASE_VIEW.md  ADMIN_SHARED_NODE_DELETION_POLICY.md  ARCHITECTURE.md  CASE_COMPARISON.md  CASE_EDITOR_DELETE_UNLINK_UI.md  CASE_UPLOAD.md  CATALOG_NODE_DELETION_POLICY.md  CHAT_QUERY_FLOW.md  CLIENT_QUICKSTART.md  CONCEPT_LINKING.md  DELETE_WORKFLOWS.md  EXTERNAL_API.md  FILE_IMPORT_FLOW_DIAGRAM.md  GRAPH_EVENTS_AND_ATTRIBUTION.md  GRAPH_VERSIONING.md  IMPORT_CONFIG_EXPLAINER.md  KNOWLEDGE_GRAPH.md  NEW_SEARCH_FLOW_README.md  PDF_PRESCREENING.md  POSTGRES_OWNERSHIP_AND_MIGRATIONS.md  RBAC.md  STREAMING_README.md  SYSTEM_OVERVIEW.md  TEST_README.md  (+1 more)
prisma/: schema.prisma
(+162 files in other folders)
